@@ -15,6 +15,7 @@ IMPROVEMENTS
 BUGFIXES
 
 IMPROVEMENTS
+19-08-05    Changed CSS z-index in style.php so FCK downdowns are not hidden
 19-08-05    Routine to get page execution time was improved to be more accurate, it    
             it now reports the same times as ZDE (Jochem Gugelot).
 
